bug(orga): fix overlapping pagination with action bar

--- a/orga/app/styles/components/ui/action-bar.scss
+++ b/orga/app/styles/components/ui/action-bar.scss
@@ -13,6 +13,7 @@
   background-color: $pix-neutral-0;
   color: $pix-neutral-60;
   font-family: $font-roboto;
+  z-index: 1;
 
   .action-bar__informations {
     margin-left: $pix-spacing-xl;
